--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <!-- HEADER -->
       <div class="row">
-        <div class="col-12 mt-5 mb-3 text-center">
+        <div class="col mt-5 mb-3 text-center">
           <svg
             width="52"
             height="47"
@@ -31,25 +31,59 @@
               fill="#D04F4F"
             />
           </svg>
-          <h1>Les petits plats</h1>
+          <h2 class="font-weight-bold" style="color: #d04f4f; font-size: 36px">
+            Les petits plats
+          </h2>
         </div>
       </div>
 
       <!-- INPUT SEARCH -->
       <div class="row mb-3">
-        <div class="col input-group-lg">
+        <div class="col input-group" style="height: 69px">
           <input
             id="searchInput"
-            class="form-control bg-light"
+            class="form-control bg-light border-right-0"
             type="text"
-            placeholder="Search..."
+            placeholder="Rechercher une recette"
           />
+          <div class="input-group-append">
+            <span class="input-group-text bg-light">
+              <svg
+                width="32"
+                height="32"
+                viewBox="0 0 32 32"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M23.4167 20.6667H21.9683L21.455 20.1717C23.2517 18.0817 24.3333 15.3683 24.3333 12.4167C24.3333 5.835 18.9983 0.5 12.4167 0.5C5.835 0.5 0.5 5.835 0.5 12.4167C0.5 18.9983 5.835 24.3333 12.4167 24.3333C15.3683 24.3333 18.0817 23.2517 20.1717 21.455L20.6667 21.9683V23.4167L29.8333 32.565L32.565 29.8333L23.4167 20.6667V20.6667ZM12.4167 20.6667C7.85167 20.6667 4.16667 16.9817 4.16667 12.4167C4.16667 7.85167 7.85167 4.16667 12.4167 4.16667C16.9817 4.16667 20.6667 7.85167 20.6667 12.4167C20.6667 16.9817 16.9817 20.6667 12.4167 20.6667Z"
+                  fill="black"
+                />
+              </svg>
+            </span>
+          </div>
         </div>
       </div>
 
       <div class="row">
-        <div class="col">
-          <p>TAGS</p>
+        <div class="col mt-4 mb-3">
+          <div
+            class="col-2 bg-primary text-center d-inline-flex justify-content-around align-items-center p-2  text-white rounded"
+          >
+            Coco
+            <svg
+              width="20"
+              height="20"
+              viewBox="0 0 20 20"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M12.59 6L10 8.59L7.41 6L6 7.41L8.59 10L6 12.59L7.41 14L10 11.41L12.59 14L14 12.59L11.41 10L14 7.41L12.59 6ZM10 0C4.47 0 0 4.47 0 10C0 15.53 4.47 20 10 20C15.53 20 20 15.53 20 10C20 4.47 15.53 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z"
+                fill="white"
+              />
+            </svg>
+          </div>
         </div>
       </div>
 
