Ajout dropdowns & comments

--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
         </div>
       </div>
 
+      <!-- SORT TAGS -->
       <div class="row">
         <div class="col mt-4 mb-3">
           <div
-            class="col-2 bg-primary text-center d-inline-flex justify-content-around align-items-center p-2  text-white rounded"
+            class="col-2 bg-primary text-center d-inline-flex justify-content-around align-items-center p-2 text-white rounded"
+            style="width: 107px; height: 37px; font-size: 14px"
           >
             Coco
             <svg
@@ -87,9 +89,84 @@
         </div>
       </div>
 
+      <!-- SORT BUTTONS -->
       <div class="row">
         <div class="col">
-          <p>DROPDOWN</p>
+          <!-- FIRST BUTTON -->
+          <div class="btn-group">
+            <button
+              type="button"
+              class="btn btn-primary dropdown-toggle d-inline border-0"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+              style="width: 170px; height: 69px; font-size: 18px"
+            >
+              Ingredients
+            </button>
+            <div
+              class="dropdown-menu bg-primary"
+              style="width: 170px; height: 69px"
+            >
+              <a href="#" class="dropdown-item"></a>
+              <a href="#" class="dropdown-item"></a>
+              <a href="#" class="dropdown-item"></a>
+            </div>
+          </div>
+
+          <!-- SECOND BUTTON -->
+          <div class="btn-group">
+            <button
+              type="button"
+              class="btn btn-primary dropdown-toggle d-inline ml-3 border-0 rounded"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+              style="
+                width: 170px;
+                height: 69px;
+                font-size: 18px;
+                background: #68d9a4;
+              "
+            >
+              Appareils
+            </button>
+            <div
+              class="dropdown-menu"
+              style="width: 170px; height: 69px; background: #68d9a4"
+            >
+              <a href="#" class="dropdown-item"></a>
+              <a href="#" class="dropdown-item"></a>
+              <a href="#" class="dropdown-item"></a>
+            </div>
+          </div>
+
+          <!-- THIRD BUTTON -->
+          <div class="btn-group">
+            <button
+              type="button"
+              class="btn btn-primary dropdown-toggle d-inline ml-3 border-0 rounded"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+              style="
+                width: 170px;
+                height: 69px;
+                font-size: 18px;
+                background: #ed6454;
+              "
+            >
+              Ustensiles
+            </button>
+            <div
+              class="dropdown-menu"
+              style="width: 170px; height: 69px; background: #ed6454"
+            >
+              <a href="#" class="dropdown-item"></a>
+              <a href="#" class="dropdown-item"></a>
+              <a href="#" class="dropdown-item"></a>
+            </div>
+          </div>
         </div>
       </div>
 
