--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="row">
         <div class="col">
           <!-- FIRST BUTTON -->
-          <div class="btn-group">
+          <div class="btn-group mb-4">
             <button
               type="button"
               class="btn btn-primary dropdown-toggle d-inline border-0"
@@ -115,7 +115,7 @@
           </div>
 
           <!-- SECOND BUTTON -->
-          <div class="btn-group">
+          <div class="btn-group mb-4">
             <button
               type="button"
               class="btn btn-primary dropdown-toggle d-inline ml-3 border-0 rounded"
@@ -142,7 +142,7 @@
           </div>
 
           <!-- THIRD BUTTON -->
-          <div class="btn-group">
+          <div class="btn-group mb-4">
             <button
               type="button"
               class="btn btn-primary dropdown-toggle d-inline ml-3 border-0 rounded"
@@ -170,9 +170,53 @@
         </div>
       </div>
 
+      <!-- CARDS SECTION -->
       <div class="row">
-        <div class="col">
-          <p>CARDS</p>
+        <div class="col-12 col-lg-4">
+          <div class="card mb-4 mb-lg-0 border-primary shadow">
+            <div class="bg-light"></div>
+            <div class="card-body">
+              <div class="card-top">
+                <div class="row">
+                  <div class="col-6">
+                    <h6 class="card-title">Limonade de Coco</h6>
+                  </div>
+
+                  <div class="col-6 d-flex justify-content-end">
+                    <svg
+                      width="20"
+                      height="20"
+                      viewBox="0 0 20 20"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M10 0C4.5 0 0 4.5 0 10C0 15.5 4.5 20 10 20C15.5 20 20 15.5 20 10C20 4.5 15.5 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18ZM10.5 5H9V11L14.2 14.2L15 12.9L10.5 10.2V5Z"
+                        fill="black"
+                      />
+                    </svg>
+                    <p class="mb-2">10 min</p>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-6">
+                  <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                </div>
+                <div class="col-6">
+                  <p class="card-text">
+                    De zéro à héros, obtenez un diplôme en informatique.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
