finalisation exemple carte recette

--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
       <!-- CARDS SECTION -->
       <div class="row">
         <div class="col-12 col-lg-4">
-          <div class="card mb-4 mb-lg-0 border-primary shadow">
-            <div class="bg-light"></div>
+          <div class="card mb-4 mb-lg-5 border-primary shadow">
+            <div class="bg-light rounded-top" style="height: 180px"></div>
             <div class="card-body">
               <div class="card-top">
                 <div class="row">
@@ -201,17 +201,19 @@
               </div>
               <div class="row">
                 <div class="col-6">
-                  <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                  </ul>
+                  <p class="m-0"><small><strong>Lait de coco: </strong>400ml</small></p>
+                  <p class="m-0"><small><strong>Jus de citron: </strong>2</small></p>
+                  <p class="m-0"><small><strong>Crème de coco: </strong>4 cuillères</small></p>
+                  <p class="m-0"><small><strong>Sucre: </strong>20g</small></p>
+                  <p class="m-0"><small><strong>Glaçons: </strong>2</small></p>
                 </div>
                 <div class="col-6">
                   <p class="card-text">
-                    De zéro à héros, obtenez un diplôme en informatique.
+                    <small>
+                      Mettre les glaçons à votre goût dans le blender, ajouter le
+                      lait, la crème de coco, le jus de 2 citrons et le sucre.
+                      Mixer jusqu'à avoir la consistence désirée.
+                    </small>
                   </p>
                 </div>
               </div>
