Ajout factory_tag & factory_card

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
       <!-- SORT TAGS -->
       <div class="row">
-        <div class="col mt-4 mb-3">
-          <div
+        <div class="col mt-4 mb-3 tag-section">
+          <!-- <div
             class="col-2 bg-primary text-center d-inline-flex justify-content-around align-items-center p-2 text-white rounded"
             style="width: 107px; height: 37px; font-size: 14px"
           >
@@ -85,7 +85,7 @@
                 fill="white"
               />
             </svg>
-          </div>
+          </div> -->
         </div>
       </div>
 
@@ -172,8 +172,8 @@
 
       <!-- CARDS SECTION -->
       <div class="row">
-        <div class="col-12 col-lg-4">
-          <div class="card mb-4 mb-lg-5 border-primary shadow">
+        <div class="col-12 col-lg-4 card-section">
+          <!-- <div class="card mb-4 mb-lg-5 border-primary shadow">
             <div class="bg-light rounded-top" style="height: 180px"></div>
             <div class="card-body">
               <div class="card-top">
@@ -181,7 +181,6 @@
                   <div class="col-6">
                     <h6 class="card-title">Limonade de Coco</h6>
                   </div>
-
                   <div class="col-6 d-flex justify-content-end">
                     <svg
                       width="20"
@@ -218,7 +217,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -238,5 +237,6 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/factories/card.js"></script>
   </body>
 </html>
