--- a/index.html
+++ b/index.html
@@ -41,32 +41,34 @@
           </div>
         </div>
         <!-- INPUT SEARCH -->
-        <div class="row mb-3">
-          <div class="col input-group">
-            <input
-              id="search-input"
-              class="form-control border-right-0"
-              type="text"
-              placeholder="Rechercher une recette"
-            />
-            <div class="input-group-append">
-              <span class="input-group-text search">
-                <svg
-                  width="32.06"
-                  height="32.06"
-                  viewBox="0 0 32.06 32.06"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M23.4167 20.6667H21.9683L21.455 20.1717C23.2517 18.0817 24.3333 15.3683 24.3333 12.4167C24.3333 5.835 18.9983 0.5 12.4167 0.5C5.835 0.5 0.5 5.835 0.5 12.4167C0.5 18.9983 5.835 24.3333 12.4167 24.3333C15.3683 24.3333 18.0817 23.2517 20.1717 21.455L20.6667 21.9683V23.4167L29.8333 32.565L32.565 29.8333L23.4167 20.6667V20.6667ZM12.4167 20.6667C7.85167 20.6667 4.16667 16.9817 4.16667 12.4167C4.16667 7.85167 7.85167 4.16667 12.4167 4.16667C16.9817 4.16667 20.6667 7.85167 20.6667 12.4167C20.6667 16.9817 16.9817 20.6667 12.4167 20.6667Z"
-                    fill="black"
-                  />
-                </svg>
-              </span>
+        <form action="">
+          <div class="row mb-3">
+            <div class="col input-group">
+              <input
+                id="search-input"
+                class="form-control border-right-0"
+                type="text"
+                placeholder="Rechercher une recette"
+              />
+              <div class="input-group-append">
+                <span class="input-group-text search">
+                  <svg
+                    width="32.06"
+                    height="32.06"
+                    viewBox="0 0 32.06 32.06"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M23.4167 20.6667H21.9683L21.455 20.1717C23.2517 18.0817 24.3333 15.3683 24.3333 12.4167C24.3333 5.835 18.9983 0.5 12.4167 0.5C5.835 0.5 0.5 5.835 0.5 12.4167C0.5 18.9983 5.835 24.3333 12.4167 24.3333C15.3683 24.3333 18.0817 23.2517 20.1717 21.455L20.6667 21.9683V23.4167L29.8333 32.565L32.565 29.8333L23.4167 20.6667V20.6667ZM12.4167 20.6667C7.85167 20.6667 4.16667 16.9817 4.16667 12.4167C4.16667 7.85167 7.85167 4.16667 12.4167 4.16667C16.9817 4.16667 20.6667 7.85167 20.6667 12.4167C20.6667 16.9817 16.9817 20.6667 12.4167 20.6667Z"
+                      fill="black"
+                    />
+                  </svg>
+                </span>
+              </div>
             </div>
           </div>
-        </div>
+        </form>
       </header>
 
       <!-- SORT TAGS -->
@@ -202,7 +204,7 @@
               <div class="btn-group mb-4 mr-3">
                 <button
                   type="button"
-                  class="btn btn-primary dropdown-toggle d-inline border-0 rounded"
+                  class="btn btn-primary dropdown-toggle d-inline align-content-center border-0 rounded"
                   data-toggle="dropdown"
                   aria-haspopup="true"
                   aria-expanded="false"
