--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             </div>
           </div>
         </form>
+        <small id="result"></small>
       </header>
 
       <!-- SORT TAGS -->
