--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <div class="row">
           <div class="col mt-5 mb-3 text-center">
             <svg
-              width="50.48"
+              width="52"
               height="46.29"
-              viewBox="0 0 50.48 46.29"
+              viewBox="0 0 52 46.29"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
             >
@@ -33,11 +33,7 @@
                 fill="#D04F4F"
               />
             </svg>
-            <h1
-              class="font-weight-bold"
-            >
-              Les petits plats
-            </h1>
+            <h1 class="font-weight-bold">Les petits plats</h1>
           </div>
         </div>
         <!-- INPUT SEARCH -->
