--- a/index.html
+++ b/index.html
@@ -163,17 +163,13 @@
                     placeholder="Rechercher un ingrédient"
                   />
                 </button>
-                <div
-                  class="dropdown-menu bg-primary"
-                  style="width: 170px; height: 69px"
-                >
-                  <a href="#" class="dropdown-item"></a>
-                  <a href="#" class="dropdown-item"></a>
-                  <a href="#" class="dropdown-item"></a>
+                <div class="container dropdown-menu bg-primary">
+                  <div class="row dropdown-item"></div>
                 </div>
               </div>
+
               <!-- SECOND BUTTON -->
-              <div class="btn-group mb-4 mr-3">
+              <!-- <div class="btn-group mb-4 mr-3">
                 <button
                   type="button"
                   class="btn btn-primary dropdown-toggle d-inline border-0 rounded"
@@ -188,17 +184,15 @@
                     placeholder="Rechercher un appareil"
                   />
                 </button>
-                <div
-                  class="dropdown-menu"
-                  style="width: 170px; height: 69px; background: #68d9a4"
-                >
+                <div class="dropdown-menu" style="background: #68d9a4">
                   <a href="#" class="dropdown-item"></a>
                   <a href="#" class="dropdown-item"></a>
                   <a href="#" class="dropdown-item"></a>
                 </div>
-              </div>
+              </div> -->
+
               <!-- THIRD BUTTON -->
-              <div class="btn-group mb-4 mr-3">
+              <!-- <div class="btn-group mb-4 mr-3">
                 <button
                   type="button"
                   class="btn btn-primary dropdown-toggle d-inline align-content-center border-0 rounded"
@@ -213,191 +207,19 @@
                     placeholder="Rechercher un ustensile"
                   />
                 </button>
-                <div
-                  class="dropdown-menu"
-                  style="width: 170px; height: 69px; background: #ed6454"
-                >
+                <div class="dropdown-menu" style="background: #ed6454">
                   <a href="#" class="dropdown-item"></a>
                   <a href="#" class="dropdown-item"></a>
                   <a href="#" class="dropdown-item"></a>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </section>
 
         <!-- CARDS SECTION -->
         <section>
-          <div class="row card-section">
-            <!-- FIRST CARD -->
-            <!-- <div class="col-12 col-lg-4 card-section">
-              <div class="card mb-4 mb-lg-5 border-primary shadow">
-                <div class="bg-light rounded-top" style="height: 180px"></div>
-                <div class="card-body">
-                  <div class="row my-auto">
-                    <div class="col-6">
-                      <h6 class="card-title">Limonade de Coco</h6>
-                    </div>
-                    <div class="col-6 d-flex justify-content-end">
-                      <svg
-                        width="20"
-                        height="20"
-                        viewBox="0 0 20 20"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M10 0C4.5 0 0 4.5 0 10C0 15.5 4.5 20 10 20C15.5 20 20 15.5 20 10C20 4.5 15.5 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18ZM10.5 5H9V11L14.2 14.2L15 12.9L10.5 10.2V5Z"
-                          fill="black"
-                        />
-                      </svg>
-                      <p class="mb-2 my-middle">10 min</p>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-6">
-                      <p class="m-0">
-                        <small><strong>Lait de coco: </strong>400ml</small>
-                      </p>
-                      <p class="m-0">
-                        <small><strong>Jus de citron: </strong>2</small>
-                      </p>
-                      <p class="m-0">
-                        <small><strong>Crème de coco: </strong>4 cuillères</small>
-                      </p>
-                      <p class="m-0">
-                        <small><strong>Sucre: </strong>20g</small>
-                      </p>
-                      <p class="m-0">
-                        <small><strong>Glaçons: </strong>2</small>
-                      </p>
-                    </div>
-                    <div class="col-6">
-                      <p class="card-text">
-                        <small>
-                          Mettre les glaçons à votre goût dans le blender, ajouter
-                          le lait, la crème de coco, le jus de 2 citrons et le
-                          sucre. Mixer jusqu'à avoir la consistence désirée.
-                        </small>
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div> -->
-            <!-- SECOND CARD -->
-            <!-- <div class="col-12 col-lg-4 card-section">
-              <div class="card mb-4 mb-lg-5 border-primary shadow">
-                <div class="bg-light rounded-top" style="height: 180px"></div>
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col-6">
-                      <h6 class="card-title">Limonade de Coco</h6>
-                    </div>
-                    <div class="col-6 d-flex justify-content-end">
-                      <svg
-                        width="20"
-                        height="20"
-                        viewBox="0 0 20 20"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M10 0C4.5 0 0 4.5 0 10C0 15.5 4.5 20 10 20C15.5 20 20 15.5 20 10C20 4.5 15.5 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18ZM10.5 5H9V11L14.2 14.2L15 12.9L10.5 10.2V5Z"
-                          fill="black"
-                        />
-                      </svg>
-                      <p class="mb-2">10 min</p>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-6">
-                      <p class="m-0">
-                        <small><strong>Lait de coco: </strong>400ml</small>
-                      </p>
-                      <p class="m-0">
-                        <small><strong>Jus de citron: </strong>2</small>
-                      </p>
-                      <p class="m-0">
-                        <small><strong>Crème de coco: </strong>4 cuillères</small>
-                      </p>
-                      <p class="m-0">
-                        <small><strong>Sucre: </strong>20g</small>
-                      </p>
-                      <p class="m-0">
-                        <small><strong>Glaçons: </strong>2</small>
-                      </p>
-                    </div>
-                    <div class="col-6">
-                      <p class="card-text">
-                        <small>
-                          Mettre les glaçons à votre goût dans le blender, ajouter
-                          le lait, la crème de coco, le jus de 2 citrons et le
-                          sucre. Mixer jusqu'à avoir la consistence désirée.
-                        </small>
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div> -->
-            <!-- THIRD CARD -->
-            <!-- <div class="col-12 col-lg-4 card-section">
-              <div class="card mb-4 mb-lg-5 border-primary shadow">
-                <div class="bg-light rounded-top" style="height: 180px"></div>
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col-6">
-                      <h6 class="card-title">Limonade de Coco</h6>
-                    </div>
-                    <div class="col-6 d-flex justify-content-end">
-                      <svg
-                        width="20"
-                        height="20"
-                        viewBox="0 0 20 20"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M10 0C4.5 0 0 4.5 0 10C0 15.5 4.5 20 10 20C15.5 20 20 15.5 20 10C20 4.5 15.5 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18ZM10.5 5H9V11L14.2 14.2L15 12.9L10.5 10.2V5Z"
-                          fill="black"
-                        />
-                      </svg>
-                      <p class="mb-2">10 min</p>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-6">
-                      <p class="m-0">
-                        <small><strong>Lait de coco: </strong>400ml</small>
-                      </p>
-                      <p class="m-0">
-                        <small><strong>Jus de citron: </strong>2</small>
-                      </p>
-                      <p class="m-0">
-                        <small><strong>Crème de coco: </strong>4 cuillères</small>
-                      </p>
-                      <p class="m-0">
-                        <small><strong>Sucre: </strong>20g</small>
-                      </p>
-                      <p class="m-0">
-                        <small><strong>Glaçons: </strong>2</small>
-                      </p>
-                    </div>
-                    <div class="col-6">
-                      <p class="card-text">
-                        <small>
-                          Mettre les glaçons à votre goût dans le blender, ajouter
-                          le lait, la crème de coco, le jus de 2 citrons et le
-                          sucre. Mixer jusqu'à avoir la consistence désirée.
-                        </small>
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div> -->
-          </div>
+          <div class="row card-section"></div>
         </section>
       </main>
     </div>
