--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 class="form-control border-right-0"
                 type="text"
                 placeholder="Rechercher une recette"
+                autocomplete="off"
               />
               <div class="input-group-append">
                 <span class="input-group-text search">
@@ -161,6 +162,7 @@
                   <input
                     class="input-search"
                     placeholder="Rechercher un ingrédient"
+                    autocomplete="off"
                   />
                 </button>
                 <div class="container dropdown-menu bg-primary">
@@ -182,6 +184,7 @@
                   <input
                     class="input-search"
                     placeholder="Rechercher un appareil"
+                    autocomplete='off'
                   />
                 </button>
                 <div class="dropdown-menu" style="background: #68d9a4">
@@ -205,6 +208,7 @@
                   <input
                     class="input-search"
                     placeholder="Rechercher un ustensile"
+                    autocomplete='off'
                   />
                 </button>
                 <div class="dropdown-menu" style="background: #ed6454">
