refactoring fichiers js & modifications sort_buttons

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               <div class="btn-group mb-4 mr-3">
                 <button
                   type="button"
-                  class="btn btn-primary dropdown-toggle d-inline border-0"
+                  class="btn btn-primary dropdown-toggle d-inline border-0 sort-button"
                   data-toggle="dropdown"
                   aria-haspopup="true"
                   aria-expanded="false"
@@ -171,10 +171,10 @@
               </div>
 
               <!-- SECOND BUTTON -->
-              <!-- <div class="btn-group mb-4 mr-3">
+              <div class="btn-group mb-4 mr-3">
                 <button
                   type="button"
-                  class="btn btn-primary dropdown-toggle d-inline border-0 rounded"
+                  class="btn btn-primary dropdown-toggle d-inline border-0 sort-button"
                   data-toggle="dropdown"
                   aria-haspopup="true"
                   aria-expanded="false"
@@ -192,13 +192,13 @@
                   <a href="#" class="dropdown-item"></a>
                   <a href="#" class="dropdown-item"></a>
                 </div>
-              </div> -->
+              </div>
 
               <!-- THIRD BUTTON -->
-              <!-- <div class="btn-group mb-4 mr-3">
+              <div class="btn-group mb-4 mr-3">
                 <button
                   type="button"
-                  class="btn btn-primary dropdown-toggle d-inline align-content-center border-0 rounded"
+                  class="btn btn-primary dropdown-toggle d-inline align-content-center border-0 sort-button"
                   data-toggle="dropdown"
                   aria-haspopup="true"
                   aria-expanded="false"
@@ -216,7 +216,7 @@
                   <a href="#" class="dropdown-item"></a>
                   <a href="#" class="dropdown-item"></a>
                 </div>
-              </div> -->
+              </div>
             </div>
           </div>
         </section>
@@ -243,6 +243,9 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/index.js"></script>
     <script src="./js/card.js"></script>
+    <script src="./js/tag.js"></script>
+    <script src="./js/dropdown.js"></script>
   </body>
 </html>
