modifications dropdown_sort html+css+js

--- a/index.html
+++ b/index.html
@@ -184,13 +184,14 @@
                   <input
                     class="input-search"
                     placeholder="Rechercher un appareil"
-                    autocomplete='off'
+                    autocomplete="off"
                   />
                 </button>
-                <div class="dropdown-menu" style="background: #68d9a4">
-                  <a href="#" class="dropdown-item"></a>
-                  <a href="#" class="dropdown-item"></a>
-                  <a href="#" class="dropdown-item"></a>
+                <div
+                  class="row dropdown-menu"
+                  style="background: #68d9a4"
+                >
+                  <!-- <div class="row dropdown-item"></div> -->
                 </div>
               </div>
 
@@ -208,13 +209,14 @@
                   <input
                     class="input-search"
                     placeholder="Rechercher un ustensile"
-                    autocomplete='off'
+                    autocomplete="off"
                   />
                 </button>
-                <div class="dropdown-menu" style="background: #ed6454">
-                  <a href="#" class="dropdown-item"></a>
-                  <a href="#" class="dropdown-item"></a>
-                  <a href="#" class="dropdown-item"></a>
+                <div
+                  class="row dropdown-menu"
+                  style="background: #ed6454"
+                >
+                  <!-- <div class="row dropdown-item"></div> -->
                 </div>
               </div>
             </div>
