mise en place des dropdown appareils et ustensiles_html+css+js (tri et affichage)

--- a/index.html
+++ b/index.html
@@ -187,11 +187,8 @@
                     autocomplete="off"
                   />
                 </button>
-                <div
-                  class="row dropdown-menu"
-                  style="background: #68d9a4"
-                >
-                  <!-- <div class="row dropdown-item"></div> -->
+                <div class="row dropdown-menu" style="background: #68d9a4">
+                  <div class="row dropdown-item"></div>
                 </div>
               </div>
 
@@ -212,11 +209,8 @@
                     autocomplete="off"
                   />
                 </button>
-                <div
-                  class="row dropdown-menu"
-                  style="background: #ed6454"
-                >
-                  <!-- <div class="row dropdown-item"></div> -->
+                <div class="row dropdown-menu" style="background: #ed6454">
+                  <div class="row dropdown-item"></div>
                 </div>
               </div>
             </div>
