--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
       <!-- SORT TAGS -->
       <main>
         <section>
-          <div class="row">
-            <div class="col mt-4 mb-3 tag-section">
+          <div class="container">
+            <div class="row mt-4 mb-3 tag-section">
               <!-- FIRST TAG -->
               <!-- <div
                 class="col tag mb-2 mr-2 bg-primary d-inline-flex justify-content-around p-2 text-white rounded"
@@ -166,7 +166,7 @@
                   />
                 </button>
                 <div class="container dropdown-menu bg-primary">
-                  <div class="row dropdown-item"></div>
+                  <div class="row dropdown-ingredient-item"></div>
                 </div>
               </div>
 
@@ -188,7 +188,7 @@
                   />
                 </button>
                 <div class="row dropdown-menu" style="background: #68d9a4">
-                  <div class="row dropdown-item"></div>
+                  <div class="row dropdown-appliance-item"></div>
                 </div>
               </div>
 
@@ -210,7 +210,7 @@
                   />
                 </button>
                 <div class="row dropdown-menu" style="background: #ed6454">
-                  <div class="row dropdown-item"></div>
+                  <div class="row dropdown-ustensil-item"></div>
                 </div>
               </div>
             </div>
