--- a/index.html
+++ b/index.html
@@ -73,79 +73,9 @@
       <main>
         <section>
           <div class="container">
-            <div class="row mt-4 mb-3 tag-section">
-              <!-- FIRST TAG -->
-              <!-- <div
-                class="col tag mb-2 mr-2 bg-primary d-inline-flex justify-content-around p-2 text-white rounded"
-                style="width: 107px; height: 37px; font-size: 14px"
-              >
-                Coco
-                <svg
-                  class="align-text-top close-tag"
-                  width="20"
-                  height="20"
-                  viewBox="0 0 20 20"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M12.59 6L10 8.59L7.41 6L6 7.41L8.59 10L6 12.59L7.41 14L10 11.41L12.59 14L14 12.59L11.41 10L14 7.41L12.59 6ZM10 0C4.47 0 0 4.47 0 10C0 15.53 4.47 20 10 20C15.53 20 20 15.53 20 10C20 4.47 15.53 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z"
-                    fill="white"
-                  />
-                </svg>
-              </div> -->
-              <!-- SECOND TAG -->
-              <!-- <div
-                class="col tag mb-2 mr-2 d-inline-flex justify-content-around p-2 text-white rounded"
-                style="
-                  width: 107px;
-                  height: 37px;
-                  font-size: 14px;
-                  background: #68d9a4;
-                "
-              >
-                Blender
-                <svg
-                  class="align-text-top close-tag"
-                  width="20"
-                  height="20"
-                  viewBox="0 0 20 20"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M12.59 6L10 8.59L7.41 6L6 7.41L8.59 10L6 12.59L7.41 14L10 11.41L12.59 14L14 12.59L11.41 10L14 7.41L12.59 6ZM10 0C4.47 0 0 4.47 0 10C0 15.53 4.47 20 10 20C15.53 20 20 15.53 20 10C20 4.47 15.53 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z"
-                    fill="white"
-                  />
-                </svg>
-              </div> -->
-              <!-- THIRD TAG -->
-              <!-- <div
-                class="col tag mb-2 mr-2 d-inline-flex justify-content-around p-2 text-white rounded"
-                style="
-                  width: 107px;
-                  height: 37px;
-                  font-size: 14px;
-                  background: #ed6454;
-                "
-              >
-                Verre
-                <svg
-                  class="align-text-top close-tag"
-                  width="20"
-                  height="20"
-                  viewBox="0 0 20 20"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M12.59 6L10 8.59L7.41 6L6 7.41L8.59 10L6 12.59L7.41 14L10 11.41L12.59 14L14 12.59L11.41 10L14 7.41L12.59 6ZM10 0C4.47 0 0 4.47 0 10C0 15.53 4.47 20 10 20C15.53 20 20 15.53 20 10C20 4.47 15.53 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z"
-                    fill="white"
-                  />
-                </svg>
-              </div> -->
-            </div>
+            <div class="row mt-4 mb-3 tag-section"></div>
           </div>
+
           <!-- SORT BUTTONS -->
           <div class="row">
             <div class="col dropdown">
