ajout des recherches des éléments dans les boutons de tri

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                   />
                 </button>
                 <div class="container dropdown-menu bg-primary">
-                  <div class="row dropdown-ingredient-item"></div>
+                  <div class="row-12 dropdown-ingredient-item"></div>
                 </div>
               </div>
 
