modification fonctions tag pour tri des recettes + refactoring

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                   data-toggle="dropdown"
                   aria-haspopup="true"
                   aria-expanded="false"
+                  tabindex="-1"
                 >
                   <p class="search-text-button d-inline-flex">Ingredients</p>
                   <input
