modifications sortButton_dropdown

--- a/index.html
+++ b/index.html
@@ -81,21 +81,21 @@
             <div class="col dropdown">
               <!-- FIRST BUTTON -->
               <div class="btn-group mb-4 mr-3">
-                <button
+                <div
                   type="button"
                   class="btn btn-primary dropdown-toggle d-inline border-0 sort-button"
                   data-toggle="dropdown"
                   aria-haspopup="true"
                   aria-expanded="false"
-                  tabindex="-1"
                 >
                   <p class="search-text-button d-inline-flex">Ingredients</p>
                   <input
+                    type="text"
                     class="input-search"
                     placeholder="Rechercher un ingrédient"
                     autocomplete="off"
                   />
-                </button>
+              </div>
                 <div class="container dropdown-menu bg-primary">
                   <div class="row-12 dropdown-ingredient-item"></div>
                 </div>
@@ -103,7 +103,7 @@
 
               <!-- SECOND BUTTON -->
               <div class="btn-group mb-4 mr-3">
-                <button
+                <div
                   type="button"
                   class="btn btn-primary dropdown-toggle d-inline border-0 sort-button"
                   data-toggle="dropdown"
@@ -117,7 +117,7 @@
                     placeholder="Rechercher un appareil"
                     autocomplete="off"
                   />
-                </button>
+                </div>
                 <div class="row dropdown-menu" style="background: #68d9a4">
                   <div class="row dropdown-appliance-item"></div>
                 </div>
@@ -125,7 +125,7 @@
 
               <!-- THIRD BUTTON -->
               <div class="btn-group mb-4 mr-3">
-                <button
+                <div
                   type="button"
                   class="btn btn-primary dropdown-toggle d-inline align-content-center border-0 sort-button"
                   data-toggle="dropdown"
@@ -139,7 +139,7 @@
                     placeholder="Rechercher un ustensile"
                     autocomplete="off"
                   />
-                </button>
+                </div>
                 <div class="row dropdown-menu" style="background: #ed6454">
                   <div class="row dropdown-ustensil-item"></div>
                 </div>
