--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="./js/recipes.js"></script>
-    <script src="./js/index.js"></script>
-    <!-- <script src="./js/index2.js"></script> -->
+    <!-- <script src="./js/index.js"></script> -->
+    <script src="./js/index2.js"></script>
     <script src="./js/sort_buttons.js"></script>
     <script src="./js/tags.js"></script>
     <script src="./js/card.js"></script>
