--- a/index.html
+++ b/index.html
@@ -171,11 +171,9 @@
       crossorigin="anonymous"
     ></script>
     <script src="./js/recipes.js"></script>
-    <script src="./js/index.js"></script>
-    <!-- <script src="./js/index2.js"></script> -->
+    <script src="./js/algorithme.js"></script>
     <script src="./js/sort_buttons.js"></script>
     <script src="./js/tags.js"></script>
     <script src="./js/card.js"></script>
-    <!-- <script src="test.js"></script> -->
   </body>
 </html>
