modification media queries + fonction dropdown

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
         </div>
         <!-- INPUT SEARCH -->
-        <form action="">
+        <form>
           <div class="row mb-3">
             <div class="col input-group">
               <input
@@ -83,6 +83,7 @@
               <div class="btn-group mb-4 mr-3">
                 <div
                   type="button"
+                  role="button"
                   class="btn btn-primary dropdown-toggle d-inline border-0 sort-button"
                   data-toggle="dropdown"
                   aria-haspopup="true"
@@ -105,6 +106,7 @@
               <div class="btn-group mb-4 mr-3">
                 <div
                   type="button"
+                  role="button"
                   class="btn btn-primary dropdown-toggle d-inline border-0 sort-button"
                   data-toggle="dropdown"
                   aria-haspopup="true"
