--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
       <!-- SORT TAGS -->
       <main>
-        <section id="dropdown-container">
+        <div id="dropdown-container">
           <div class="container">
             <div class="row mt-4 mb-3 tag-section"></div>
           </div>
@@ -82,14 +82,13 @@
               <!-- FIRST BUTTON -->
               <div class="btn-group mb-4 mr-3">
                 <div
-                  type="button"
                   role="button"
                   class="btn btn-primary dropdown-toggle d-inline border-0 sort-button"
                   data-toggle="dropdown"
                   aria-haspopup="true"
                   aria-expanded="false"
                 >
-                  <p class="search-text-button d-inline-flex">Ingredients</p>
+                  Ingrédients
                   <input
                     type="text"
                     class="input-search-dropdown"
@@ -97,6 +96,7 @@
                     autocomplete="off"
                   />
                 </div>
+                <!-- <p class="search-text-button d-inline-flex">Ingredients</p> -->
                 <div class="container dropdown-menu bg-primary">
                   <div class="row-12 dropdown-ingredient-item"></div>
                 </div>
@@ -106,14 +106,14 @@
               <div class="btn-group mb-4 mr-3">
                 <div
                   type="button"
-                  role="button"
                   class="btn btn-primary dropdown-toggle d-inline border-0 sort-button"
                   data-toggle="dropdown"
                   aria-haspopup="true"
                   aria-expanded="false"
                   style="background: #68d9a4"
                 >
-                  <p class="search-text-button d-inline-flex">Appareils</p>
+                  Appareils
+                  <!-- <p class="search-text-button d-inline-flex">Appareils</p> -->
                   <input
                     class="input-search-dropdown"
                     placeholder="Rechercher un appareil"
@@ -135,7 +135,8 @@
                   aria-expanded="false"
                   style="background: #ed6454"
                 >
-                  <p class="search-text-button d-inline-flex">Ustensiles</p>
+                  Ustensiles
+                  <!-- <p class="search-text-button d-inline-flex">Ustensiles</p> -->
                   <input
                     class="input-search-dropdown"
                     placeholder="Rechercher un ustensile"
@@ -148,12 +149,12 @@
               </div>
             </div>
           </div>
-        </section>
+        </div>
 
         <!-- CARDS SECTION -->
-        <section>
+        <div id="card-section-container">
           <div class="row card-section"></div>
-        </section>
+        </div>
       </main>
     </div>
 
