Empêcher l'envoi du formulaire

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
         </div>
         <!-- INPUT SEARCH -->
-        <form action="">
+        <form>
           <div class="row mb-3">
             <div class="col input-group">
               <input
