modification index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
       <!-- SORT TAGS -->
       <main>
-        <section id="dropdown-container">
+        <div id="dropdown-container">
           <div class="container">
             <div class="row mt-4 mb-3 tag-section"></div>
           </div>
@@ -82,11 +82,8 @@
               <!-- FIRST BUTTON -->
               <div class="btn-group mb-4 mr-3">
                 <div
-                  type="button"
                   class="btn btn-primary dropdown-toggle d-inline border-0 sort-button"
                   data-toggle="dropdown"
-                  aria-haspopup="true"
-                  aria-expanded="false"
                 >
                   <p class="search-text-button d-inline-flex">Ingredients</p>
                   <input
@@ -104,11 +101,8 @@
               <!-- SECOND BUTTON -->
               <div class="btn-group mb-4 mr-3">
                 <div
-                  type="button"
                   class="btn btn-primary dropdown-toggle d-inline border-0 sort-button"
                   data-toggle="dropdown"
-                  aria-haspopup="true"
-                  aria-expanded="false"
                   style="background: #68d9a4"
                 >
                   <p class="search-text-button d-inline-flex">Appareils</p>
@@ -126,11 +120,8 @@
               <!-- THIRD BUTTON -->
               <div class="btn-group mb-4 mr-3">
                 <div
-                  type="button"
                   class="btn btn-primary dropdown-toggle d-inline align-content-center border-0 sort-button"
                   data-toggle="dropdown"
-                  aria-haspopup="true"
-                  aria-expanded="false"
                   style="background: #ed6454"
                 >
                   <p class="search-text-button d-inline-flex">Ustensiles</p>
@@ -146,12 +137,10 @@
               </div>
             </div>
           </div>
-        </section>
+        </div>
 
         <!-- CARDS SECTION -->
-        <section>
-          <div class="row card-section"></div>
-        </section>
+        <div class="row card-section"></div>
       </main>
     </div>
 
